# aoc22

./: .gitignore  Cargo.toml  flake.nix
src/: itertools.rs  lib.rs  math.rs  matrix.rs  parsers.rs  range.rs
