[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { version = "0.10" }
nom = { version = "7.1" }
indextree = { version = "4.5" }

[dev-dependencies]
pretty_assertions = {version = "1.3" }
